Updated readme 	modified:   README.md 	modified:   doc/page.dox

--- a/doc/page.dox
+++ b/doc/page.dox
@@ -1,3 +1,17 @@
+
+/**
+ * \defgroup base Base
+ * \defgroup digi Digitization
+ * \defgroup reco Reconstruction
+ * \defgroup track Tracking
+ */
+
+
+\defgroup services Services
+This is the services
+
+\defgroup subsytems Detector Subsystems
+Various subsystems
 /** 
  *    \addtogroup services 
  */
