Added ACTS Bfield wrapper for dd4hep fields.
- Use the field map and beamline magnetic fields as defined via compact
detector description.
- There is probably a better implementation but this is the most direct.

--- a/doc/page.dox
+++ b/doc/page.dox
@@ -19,7 +19,7 @@ Various subsystems
 
 /**
  * \defgroup geosvc Geometry Services
- * \defgroup detasvc Data Services
+ * \defgroup datasvc Data Services
  * \defgroup magsvc Magnetic Field Services
  */
 
