chore: rename `eicd` -> `EDM4hep`
```bash
find . -name "*" -type f -print | grep -vE '\.git\/' | xargs sed -i 's/\<eicd\>/edm4eic/g'
find . -name "*" -type f -print | grep -vE '\.git\/' | xargs sed -i 's/\<EICD\>/EDM4EIC/g'
```

Edge cases:
- did not change `eicd` in the Dependencies in `README.md`
- changed `edm4eic` to `EDM4eic` in `.gitlab-ci.yml`

--- a/doc/page.dox
+++ b/doc/page.dox
@@ -22,7 +22,7 @@
  * \brief Global geometry service
  * 
  * \defgroup datasvc Data Services
- * \brief Data services for using eicd/podio 
+ * \brief Data services for using edm4eic/podio 
  *
  */
 
